--- a/app/src/main/res/layout/meeting_card.xml
+++ b/app/src/main/res/layout/meeting_card.xml
@@ -16,5 +16,31 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent" >
+
+        <LinearLayout
+            android:id="@+id/linearLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/meetingNameTxt"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Title" />
+
+            <TextView
+                android:id="@+id/meetingDescriptionTxt"
+                android:layout_width="match_parent"
+                android:layout_height="96dp"
+                android:text="Description" />
+
+            <TextView
+                android:id="@+id/meetingLinkTxt"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="www.meeting.com" />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
